feat(crud-views): Implement all CRUD operations on user route and controller with dedicated view layer
